--- a/data/Admin.ipynb
+++ b/data/Admin.ipynb
@@ -72,9 +72,8 @@
     "    'Poem': [poem]\n",
     "})\n",
     "\n",
-    "data = pd.concat([_, data])\n",
+    "data = pd.concat([data, _])\n",
     "data.drop_duplicates(inplace=True)\n",
-    "# data.sort_values(by='Title', inplace=True)\n",
     "data.reset_index(drop=True, inplace=True)\n",
     "\n",
     "data.to_json('data.json')"
